--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "prompt-forge",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,5 +10,10 @@
     "next": "13.5.11",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.4.2",
+    "@types/react": "^18.2.20",
+    "@types/node": "^20.11.19"
   }
 }
